--- a/src/components/Navigation/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.css
@@ -3,6 +3,14 @@
     padding: 0;
     list-style: none;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: 100%;
+}
+
+@media (min-width: 499px) {
+    .NavigationItems {
+        flex-direction: row;
+    }
 }
