--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -3,7 +3,7 @@
     position: fixed;
     width: 250px;
     min-width: 70%;
-    min-height: 100%;
+    height: 100%;
     padding: 16px 10px;
     top: 0;
     left: 0;
